// Original file: src/modules/user/config/proto/user.proto


export interface LoginResponse {
  'message'?: (string);
  'accessToken'?: (string);
  'refreshToken'?: (string);
}

export interface LoginResponse__Output {
  'message'?: (string);
  'accessToken'?: (string);
  'refreshToken'?: (string);
}
